--- a/public/index.html
+++ b/public/index.html
@@ -13,13 +13,14 @@
     </style>
   </head>
   <body>
-    <div>Status: <span>Uninitialized</span></div>
+    <div>Status: <span id="status">Uninitialized</span></div>
+    <div>Cross Origin Isolated: <span id="isolated">...</span></div>
     <div>
       This application allows you to step through Photoshop Web's booting
       process with a configured memory amount.
     </div>
     <label>
-      <div>Allotted Memory: <span id="configured-memory"></span>GB</div>
+      <div>Allotted Memory: <span id="configured-memory">...</span>GB</div>
       <input type="range" min="1" max="4" step="0.5" />
     </label>
     <ul>
@@ -32,6 +33,9 @@
       <li><button id="draw-brushstroke">Draw Brushstroke</button></li>
     </ul>
     <script type="module">
+      const isolation = document.querySelector("#isolated");
+      isolation.textContent = crossOriginIsolated;
+
       const memory = document.querySelector(`input[type="range"]`);
       const configuredMemory = document.querySelector("#configured-memory");
 
