--- a/public/index.html
+++ b/public/index.html
@@ -174,6 +174,7 @@
         return originalFetch(...args);
       };
 
+      const canvasStatus = document.querySelector("#canvas-status");
       function createAndAttachCanvas() {
         const { height: bodyHeight, width: bodyWidth } =
           document.body.getBoundingClientRect();
@@ -183,6 +184,7 @@
         canvas.height = remainingHeight < 400 ? 400 : remainingHeight;
         canvas.width = bodyWidth;
         document.body.appendChild(canvas);
+        canvasStatus.textContent = COMPLETE;
       }
 
       for (const [key, run] of Object.entries(autobootConfig)) {
