number boot steps

--- a/public/index.html
+++ b/public/index.html
@@ -49,33 +49,39 @@
     <div class="divider"></div>
     <div>Boot Process</div>
     <div>
+      1.
       <input id="auto-memory" type="checkbox" />
       <button id="load-memory">Create WASM Memory</button>
       <span id="memory-status"></span>
     </div>
     <div>
+      2.
       <input id="auto-glue" type="checkbox" />
       <button id="load-glue">Load Emscripten JS Glue Code</button>
       <span id="glue-status"></span>
     </div>
     <div>
+      3.
       <input id="auto-wasm" type="checkbox" />
       <button id="load-wasm">Load WASM</button>
       <span id="wasm-status"></span>
     </div>
     <div>
-      <input id="auto-canvas" type="checkbox" />
-      <button id="load-canvas">Create and Attach Canvas</button>
+      4.
+      <input disabled id="auto-canvas" type="checkbox" />
+      <button disabled id="load-canvas">Create and Attach Canvas</button>
       <span id="canvas-status"></span>
     </div>
     <div>
-      <input id="auto-file" type="checkbox" />
-      <button id="load-file">Import File</button>
+      5.
+      <input disabled id="auto-file" type="checkbox" />
+      <button disabled id="load-file">Import File and Open</button>
       <span id="file-status"></span>
     </div>
     <div>
-      <input id="auto-stroke" type="checkbox" />
-      <button id="load-stroke">Draw Brushstroke</button>
+      6.
+      <input disabled id="auto-stroke" type="checkbox" />
+      <button disabled id="load-stroke" disabled>Draw Brushstroke</button>
       <span id="stroke-status"></span>
     </div>
     <div class="divider"></div>
