--- a/public/index.html
+++ b/public/index.html
@@ -69,7 +69,7 @@
     <div>
       4.
       <input id="auto-canvas" type="checkbox" />
-      <button id="load-canvas">Create and Attach Canvas</button>
+      <button id="load-canvas">Create Canvas and Attach Renderer</button>
       <span id="canvas-status"></span>
     </div>
     <div>
