opening a file is proving difficult

--- a/public/index.html
+++ b/public/index.html
@@ -74,8 +74,8 @@
     </div>
     <div>
       5.
-      <input id="auto-file" type="checkbox" />
-      <button id="load-file">Import File and Open</button>
+      <input disabled id="auto-file" type="checkbox" />
+      <button disabled id="load-file">Import File and Open</button>
       <span id="file-status"></span>
     </div>
     <div>
